# bert-vits2-cpp

./: .gitattributes  .gitignore  CMakeLists.txt  CPP_FRONTEND_DESIGN.md  README.md
.github/workflows/: linux.yml
cmake/: CppJieba.cmake  Mlx.cmake  OnnxRuntime.cmake  OpenJtalk.cmake  Sentencepiece.cmake
scripts/: build.ps1  build.sh  build_linux.sh  build_macos.sh  bundle_cuda_linux.sh  fetch_onnxruntime_linux.sh  fetch_onnxruntime_macos.sh  strip_cuda_linux.sh  test_kanade_zh.sh  test_keqing_zh.sh  test_tachibana_mix.sh  test_tts_z.sh  test_tts_zh.sh
src/: CMakeLists.txt  bv2_frontend.py  bv2_openjtalk.cpp  bv2_openjtalk.h  bv2_sentencepiece.cpp  bv2_sentencepiece.h  bv2_text_internal.h  bv2_tts.cpp  bv2_tts.h  bv2_zh_frontend.cpp  bv2_zh_frontend.h  bv2_zh_tone_sandhi.cpp  bv2_zh_tone_sandhi.h  convert_bert_to_mlx.py  convert_to_mlx.py  export_chinese_bert_onnx.py  export_english_bert_onnx.py  export_japanese_bert_onnx.py  export_project_model.py  frontend_export.py  main.cpp  make_zh_data.py  make_zh_pinyin_table.py  prepare_project_input.py  zh_neural_tone_words.txt  zh_not_neural_tone_words.txt  zh_pinyin.tsv
src/mlx/: bv2_mlx_attentions.cpp  bv2_mlx_attentions.h  bv2_mlx_bert.cpp  bv2_mlx_bert.h  bv2_mlx_flow_modules.cpp  bv2_mlx_flow_modules.h  bv2_mlx_models.cpp  bv2_mlx_models.h  bv2_mlx_modules.cpp  bv2_mlx_modules.h  bv2_mlx_ops.cpp  bv2_mlx_ops.h  bv2_mlx_runtime.cpp  bv2_mlx_runtime.h  bv2_mlx_transforms.cpp  bv2_mlx_transforms.h
tests/: README.md  gen_jp_fixture.cpp  stream_play.py  test_jp_api.py  test_jp_frontend.cpp
tests/fixtures/: jp_greeting.json
